--- a/printa0f3.html
+++ b/printa0f3.html
@@ -1,8 +1,8 @@
 <html>
-<title>Ýôôåêòèâíîå îáó÷åíèå</title>
+<title>Эффективное обучение</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A92 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:58:42 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ýôôåêòèâíîå îáó÷åíèå</h1><a href=indexa0f3.html?id=F4A92 class=slink>web-âåðñèÿ</a><p><span class='print'><p>
-	<ul><li><h2><a href='F4A93.html'>Çàãðóçèòå ìíå åãî ïðÿìî â ãîëîâó!</a></h2>Ïî÷åìó DVD-òðåíèíã çà 500$ â 100 ðàç âûãîäíåå êíèãè çà 50$?  ×òî íàõîäÿò â DVD-òðåíèíãàõ ñîòíè ëþäåé, êîòîðûå óæå íå ïåðâûé ãîä èõ ó íàñ ïîêóïàþò? ...Êàçàëîñü áû, ìîæíî óçíàòü òó æå èíôîðìàöèþ â èíòåðíåòå èëè èç êíèã. Òàê çà÷åì æå ïëàòèòü â íåñêîëüêî ðàç áîëüøå çà âèäåî-òðåíèíã?</li></ul></p>
-</span><p><a href=indexa0f3.html?id=F4A92 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Эффективное обучение</h1><a href=indexa0f3.html?id=F4A92 class=slink>web-версия</a><p><span class='print'><p>
+	<ul><li><h2><a href='F4A93.html'>Загрузите мне его прямо в голову!</a></h2>Почему DVD-тренинг за 500$ в 100 раз выгоднее книги за 50$?  Что находят в DVD-тренингах сотни людей, которые уже не первый год их у нас покупают? ...Казалось бы, можно узнать ту же информацию в интернете или из книг. Так зачем же платить в несколько раз больше за видео-тренинг?</li></ul></p>
+</span><p><a href=indexa0f3.html?id=F4A92 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
