--- a/printa134.html
+++ b/printa134.html
@@ -2,7 +2,7 @@
 <title>Видео-курс "Сам себе психолог"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4DFF by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:23:08 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='6 июля (в понедельник) выходит наш новый онлайн-курс "Сам себе психолог", который обучает техникам самостоятельного решения психологических проблем.
 И по своей практичности, это просто бомба! (даже психологи завидуют ;))'>
