--- a/printa614.html
+++ b/printa614.html
@@ -2,7 +2,7 @@
 <title>Бизнес "в потоке"</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=7F01E38B-F459F-693615CC by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:09:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='О том, как управление состояниями используется в бизнесе.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
