--- a/printa7b5.html
+++ b/printa7b5.html
@@ -2,7 +2,7 @@
 <title>Разговор по понятиям</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=BF716F22-F435D-9DC90B05 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:00 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='Статья Татьяны Мужицкой о понимании между людьми.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
