--- a/printa974.html
+++ b/printa974.html
@@ -1,10 +1,10 @@
 <html>
-<title>Íîâûé Êîä ÍËÏ îò åãî îñíîâàòåëåé</title>
+<title>Новый Код НЛП от его основателей</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=A9C0F6FD-F4483-7FB47D13 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 13:58:54 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='íîâûé êîä íëï'>
-<meta name="description" content='Âûäåðæêè èç ñåìèíàðîâ Äæîíà Ãðèíäåðà è Äæóäèò Äåëîçüå.'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='новый код нлп'>
+<meta name="description" content='Выдержки из семинаров Джона Гриндера и Джудит Делозье.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,15 +14,15 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Íîâûé Êîä ÍËÏ îò åãî îñíîâàòåëåé</h1><a href=indexa974.html?id=A9C0F6FD-F4483-7FB47D13 class=slink>web-âåðñèÿ</a><p><span class='print'><P><ul><li><h2><a href='AE1C8889-F429F-3BB5D16A.html'>Íîâûé Êîä ÍËÏ îò Äæóäèò Äåëîçüå</a></h2>Ìàñòåðñòâî, Íîâûé Êîä è ñèñòåìíîå ÍËÏ. (Èç âûñòóïëåíèÿ Äæóäèò Äåëîçüå â NLP Group - Padington, Ëîíäîí, 19 àïðåëÿ 1993 ã.)</li><li><h2><a href='5433F004-F42A9-F1A024D5.html'>Õîðîøî îðãàíèçîâàííîå áåññîçíàòåëüíîå, Äæîí Ãðèíäåð</a></h2>Ôðàãìåíò ñåìèíàðà Äæîíà Ãðèíäåðà â Ìîñêâå (2004 ã.), ïîñâÿùåííûé âîïðîñàì ñîçíàòåëüíî-áåññîçíàòåëüíîãî èíòåðôåéñà.</li><li><h2><a href='7747D47E-F45B2-1A8FD2BB.html'>Ïî ìàòåðèàëàì êíèãè Äæîíà Ãðèíäåðà è Êàðìåí Áîñòèê «Øåïîò íà âåòðó»</a></h2>Îñíîâûå ïðåäïîñûëêè ïîÿâëåíèÿ Íîâîãî Êîäà ÍËÏ, åãî îòëè÷èå îò êëàññè÷åñêîãî ÍËÏ è îñíîâíûå ïàòòåðíû.</li></ul> </P>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Новый Код НЛП от его основателей</h1><a href=indexa974.html?id=A9C0F6FD-F4483-7FB47D13 class=slink>web-версия</a><p><span class='print'><P><ul><li><h2><a href='AE1C8889-F429F-3BB5D16A.html'>Новый Код НЛП от Джудит Делозье</a></h2>Мастерство, Новый Код и системное НЛП. (Из выступления Джудит Делозье в NLP Group - Padington, Лондон, 19 апреля 1993 г.)</li><li><h2><a href='5433F004-F42A9-F1A024D5.html'>Хорошо организованное бессознательное, Джон Гриндер</a></h2>Фрагмент семинара Джона Гриндера в Москве (2004 г.), посвященный вопросам сознательно-бессознательного интерфейса.</li><li><h2><a href='7747D47E-F45B2-1A8FD2BB.html'>По материалам книги Джона Гриндера и Кармен Бостик «Шепот на ветру»</a></h2>Основые предпосылки появления Нового Кода НЛП, его отличие от классического НЛП и основные паттерны.</li></ul> </P>
 <P>
-</span><p><a href=indexa974.html?id=A9C0F6FD-F4483-7FB47D13 class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexa974.html?id=A9C0F6FD-F4483-7FB47D13 class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -83,7 +83,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -105,7 +105,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
