--- a/printaa09.html
+++ b/printaa09.html
@@ -2,7 +2,7 @@
 <title>Притча про вызывателя дождя</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4C54 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:06 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='Притча про вызывателя дождя Версия для продвинутой аудитории и тех, кто в теме Спиральной Динамики'>
 <meta name="description" content='Версия для продвинутой аудитории и тех, кто в теме Спиральной Динамики'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
