--- a/printaa0a.html
+++ b/printaa0a.html
@@ -1,10 +1,10 @@
 <html>
-<title>Ñòàòüè è êîïèðàéòèíã</title>
+<title>Статьи и копирайтинг</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F486A by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:05:29 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<meta name="keywords" content='Ñòàòüè è êîïèðàéòèíã ïîäêàñò ïèñàòü'>
-<meta name="description" content='Êàê íà÷àòü ïèñàòü óâëåêàòåëüíûå ñòàòüè'>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="keywords" content='Статьи и копирайтинг подкаст писать'>
+<meta name="description" content='Как начать писать увлекательные статьи'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
 <style type="text/css">
 <!--
@@ -14,12 +14,12 @@ body {
 -->
 </style>
 <body>
-<a href=index.html><img src='images/logo.png' alt='ÍËÏ' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Ñòàòüè è êîïèðàéòèíã</h1><a href=indexaa0a.html?id=F486A class=slink>web-âåðñèÿ</a><p><span class='print'><h3>
-	Àâòîðñêèå &quot;ôèøêè&quot;</h3>
+<a href=index.html><img src='images/logo.png' alt='НЛП' border='0'></a><br>&nbsp;<p><h1 style='margin-bottom:0'>Статьи и копирайтинг</h1><a href=indexaa0a.html?id=F486A class=slink>web-версия</a><p><span class='print'><h3>
+	Авторские &quot;фишки&quot;</h3>
 <p>
-	Äåñÿòèìèíóòíûé ôðàãìåíò âåáèíàðà &quot;Êàê íà÷àòü ïèñàòü?&quot;, â êîòîðîì ÿ ðàñêðûâàþ íåêîòîðûå ñâîè àâòîðñêèå &quot;ôèøêè&quot;, äåëàþùèå ñòàòüè âêóñíûìè è óâëåêàòåëüíûìè!</p>
+	Десятиминутный фрагмент вебинара &quot;Как начать писать?&quot;, в котором я раскрываю некоторые свои авторские &quot;фишки&quot;, делающие статьи вкусными и увлекательными!</p>
 <p>
-	<strong><a href="index.html?id=99">Ñêà÷àòü àóäèî</a></strong></p>
+	<strong><a href="index.html?id=99">Скачать аудио</a></strong></p>
 <p>
 	<a name='vote'></a><script type='text/javascript'>
 function light(num){
@@ -43,16 +43,16 @@ function voted(){
 }
 </script>
     <div class='mark' style='white-space: nowrap; width: 208px; overflow: hidden; float: left;'>
-    <div class='service'>Îöåíèòü:</div>
+    <div class='service'>Оценить:</div>
     <div class='stars' id='stars'>
-    <a href='setup32e4.html?id=F486A&amp;vote=1&amp;close=1' target='_blank' title='Óæàñíî!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup6170.html?id=F486A&amp;vote=2&amp;close=1' target='_blank' title='Ïëîõî'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup4ea8.html?id=F486A&amp;vote=3&amp;close=1' target='_blank' title='Ñðåäíå'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup7bd4.html?id=F486A&amp;vote=4&amp;close=1' target='_blank' title='Õîðîøî'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
-    <a href='setup2597.html?id=F486A&amp;vote=5&amp;close=1' target='_blank' title='Îòëè÷íî!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup32e4.html?id=F486A&amp;vote=1&amp;close=1' target='_blank' title='Ужасно!'><div class='' id='star1' onmouseover='light(1)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup6170.html?id=F486A&amp;vote=2&amp;close=1' target='_blank' title='Плохо'><div class='' id='star2' onmouseover='light(2)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup4ea8.html?id=F486A&amp;vote=3&amp;close=1' target='_blank' title='Средне'><div class='' id='star3' onmouseover='light(3)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup7bd4.html?id=F486A&amp;vote=4&amp;close=1' target='_blank' title='Хорошо'><div class='' id='star4' onmouseover='light(4)' onmouseout='delight()' onclick='voted()'></div></a>
+    <a href='setup2597.html?id=F486A&amp;vote=5&amp;close=1' target='_blank' title='Отлично!'><div class='' id='star5' onmouseover='light(5)' onmouseout='delight()' onclick='voted()'></div></a>
     </div>
     <div class='line' id='line'></div>
-    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Ñïàñèáî!</div>
+    <div id='thanks' style='display: none; float: left; padding-top: 5px;'>Спасибо!</div>
     </div> <div style='padding-top: 10px;'><!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_facebook"></a>
@@ -75,12 +75,12 @@ function voted(){
 
 <script type="text/javascript">var addthis_config = {"data_track_clickback":true};</script>
 <script type="text/javascript" src="../s7.addthis.com/js/250/addthis_widget.js#pubid=nlping"></script>
-<!-- AddThis Button END --></div> <div class='relateditems'><p>Ëó÷øèå ìàòåðèàëû ðàçäåëà &quot;Àóäèî&quot;</p> <ul><li><a href='F4AD9.html' title=''>Ñìåíà ïðîôåññèîíàëüíîé äåÿòåëüíîñòè</a></li><li><a href='F4AC0.html' title=''>Èíòóèöèÿ è áåññîçíàòåëüíîå</a></li><li><a href='F4ABF.html' title=''>Ðàáîòà ñ íåãàòèâíûìè ýìîöèÿìè, ñòðàõîì</a></li><li><a href='F4ADA.html' title=''>Áèçíåñ îáó÷åíèå</a></li><li><a href='F4ABE.html' title=''>Êàê ýôôåêòèâíî ó÷èòüñÿ íà òðåíèíãàõ?</a></li></ul></div> 
-<h3>Êîììåíòàðèè Facebook</h3>
+<!-- AddThis Button END --></div> <div class='relateditems'><p>Лучшие материалы раздела &quot;Аудио&quot;</p> <ul><li><a href='F4AD9.html' title=''>Смена профессиональной деятельности</a></li><li><a href='F4AC0.html' title=''>Интуиция и бессознательное</a></li><li><a href='F4ABF.html' title=''>Работа с негативными эмоциями, страхом</a></li><li><a href='F4ADA.html' title=''>Бизнес обучение</a></li><li><a href='F4ABE.html' title=''>Как эффективно учиться на тренингах?</a></li></ul></div> 
+<h3>Комментарии Facebook</h3>
 <div id="fb-root"></div>
 <div class="fb-comments" data-href="http://nlping.ru/F486A" data-num-posts="100" data-width="600"></div>
 
-<h3>Êîììåíòàðèè Âêîíòàêòå</h3>
+<h3>Комментарии Вконтакте</h3>
 <div id="vk_comments"></div>
 <script type="text/javascript">
 VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
@@ -103,13 +103,13 @@ VK.Widgets.Comments("vk_comments", {limit: 100, width: "600", attach: false});
     })();
 </script>
 </p>
-</span><p><a href=indexaa0a.html?id=F486A class=slink>web-âåðñèÿ</a><br><a href=index.html class=slink>íà ãëàâíóþ</a><p><hr>
+</span><p><a href=indexaa0a.html?id=F486A class=slink>web-версия</a><br><a href=index.html class=slink>на главную</a><p><hr>
     <table width="100%"  border="0">
       <tr>
         <td width="50%" align="left" valign="top">
             <span class="footer"><span class="years">© 2005-2015 <a href="index.html">nlping.ru</a> <br/>
-+7 (495) 772-68-73</span>   Ïí-Ïò ñ 10 äî 19<br/>
-Ìîñêâà, Ïðîñïåêò Ìèðà, 68ñ1, îôèñ 212</span>
++7 (495) 772-68-73</span>   Пн-Пт с 10 до 19<br/>
+Москва, Проспект Мира, 68с1, офис 212</span>
         </td>
         <td width="50%" align="right" valign="top"><br>
             <span class="footer"><script type="text/javascript">
@@ -170,7 +170,7 @@ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = 
 </script>
 
 
-<!-- Êîä ðåòàðãåòèíãà adroll -->
+<!-- Код ретаргетинга adroll -->
 
 <script type="text/javascript">
 adroll_adv_id = "JC2G2SFFFJBJTE57G2VYGY";
@@ -192,7 +192,7 @@ window.onload = function(){
 
 <script language="JavaScript" type="text/javascript" src="../s.nlping.ru/jsapi/click.js"></script>
 
-<!-- äîáàâèòü ìåòêè ê ññûëêàì -->
+<!-- добавить метки к ссылкам -->
 <script>
 $(".lp_link").attr("href", $(".lp_link").attr("href") + window.location.search);
 </script></span>
