--- a/printaaf9.html
+++ b/printaaf9.html
@@ -2,7 +2,7 @@
 <title>Что хочешь ты?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F47B7 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:38 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Притча про то, как мы управляем своей жизнью.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
