--- a/printab24.html
+++ b/printab24.html
@@ -2,7 +2,7 @@
 <title>Принцип критической разницы и конечная прибыль</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A68 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:04:13 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Сотые доли секунды, которые определяют судьбу. Когда незначительной разницы в бизнесе или спорте достаточно для полной победы.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
