--- a/printabc1.html
+++ b/printabc1.html
@@ -2,7 +2,7 @@
 <title>4 типа клиентов в Вашей нише</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4A2D by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:03:36 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Как удовлетворить потребности разных клиентов в одной целевой нише?'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
