--- a/printabcf.html
+++ b/printabcf.html
@@ -2,7 +2,7 @@
 <title>Составляющие успеха</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=D02DBF37-F46B9-834FCE15 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:02:05 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп, успех, метапрограммы, мотивация'>
 <meta name="description" content='В чем бы мы ни хотели достичь успеха, всегда важно помнить про баланс двух его составляющих: фокусировке на результате и состоянии “потока”.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
