--- a/printac3c.html
+++ b/printac3c.html
@@ -2,7 +2,7 @@
 <title>Кто творит реальность?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=19C9920D-F462B-DEFDF3D8 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:46 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content='Чему учат просветленные, или взгляд на реальность сквозь идеи квантовой физики.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
