--- a/printae4b.html
+++ b/printae4b.html
@@ -2,7 +2,7 @@
 <title>Дзен бесконечности</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=1CBCC5D6-F4458-755C6468 by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:10:52 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content='нлп'>
 <meta name="description" content='О просветлении, целях, смерти и бесконечности.'>
 <link rel="stylesheet" href="css/print.css" type="text/css">
