--- a/printae74.html
+++ b/printae74.html
@@ -2,7 +2,7 @@
 <title>Интересно, какие сегодняшние ограничения через 50-100 лет будут такими же смешными?</title>
 
 <!-- Mirrored from nlping.ru/print.php?id=F4D1C by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 05 Sep 2025 14:01:59 GMT -->
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="keywords" content=''>
 <meta name="description" content=''>
 <link rel="stylesheet" href="css/print.css" type="text/css">
